appId: com.backtrackai.backtrack
---
- launchApp
- assertVisible: 'Search'
- tapOn: 'Search'
- assertVisible: 'Search Items'
- inputText: 'test'
- assertVisible: 'Search Results'
- assertVisible: 'Filter'
- tapOn: 'Filter'
- assertVisible: 'Source Type'
- tapOn: 'Screenshot'
- assertVisible: 'Apply'
- tapOn: 'Apply'
- assertVisible: 'Search Results'
- assertVisible: 'Clear'
- tapOn: 'Clear'
- assertVisible: 'Search Items'
- inputText: 'youtube'
- assertVisible: 'Search Results'
- tapOn: 'Search Results'
- assertVisible: 'Item Detail'
- tapOn: 'Back'
- assertVisible: 'Search'
